--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
 <p class="logo">JAYABHARATHI J</p>
 <ul>
-<li><a href="portfolio.html">Home</a></li><
+<li><a href="index.html">Home</a></li><
 <li><a href="about.html">About Me</a></li>
 <li><a href="skills.html">Skills</a></li>
 <li><a href="project.html">Project</a></li>
