--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <div id="about">
 
 <pre>                            <b> Hello  everyone!  I'm <span>JAYABHARATHI</span> and I am a computer science student,studying in Thanthai 
-  Periyar Govt. Arts and Science collage, Trichy.<span>I am fresher</span>,But amazing to achive a challanging and succussful 
+  Periyar Govt. Arts and Science collage, Trichy.<span>I am fresher</span>,But amazing to achive a challanging and successful 
   career where I can make a significant contribution using innovative ideas,skills,knowledge,and experience with
   the objective of development and growth of organization.</b></pre>
 </div> 
