--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
 <h2>Soft Skills</h2><br><br>
 <a href="#" class="btn">1. Teamwork</a><br><br>
 <a href="#" class="btn">2.Adaptablity</a><br><br>
-<a href="#" class="btn">3. Creatiity</a><br><br>
+<a href="#" class="btn">3. Creativity</a><br><br>
 <a href="#" class="btn">4. Decipline</a><br><br>
 <a href="#" class="btn">5. Problem solving</a><br><br>
 <a href="#" class="btn">6. Time management</a><br><br>
@@ -38,7 +38,7 @@
 <a href="#" class="btn">1. Python</a><br><br>
 <a href="#" class="btn">2. TABLEAU</a><br><br>
 <a href="#" class="btn">3. Power bi</a><br><br>
-<a href="#" class="btn">4. Programing</a><br><br>
+<a href="#" class="btn">4. Programming</a><br><br>
 <a href="#" class="btn">5. Data Analysis</a><br><br>
 <a href="#" class="btn">6. Artificial Inteligence</a><br><br>
 </div>
