--- a/about.html
+++ b/about.html
@@ -39,19 +39,19 @@
 </tr>
 <tr>
 <th>B.Sc(CS)</th>
-<td>Thantha Periyar Govt.<br> Arts and Science Collage.<br>Kajamalai,Trichy</td>
+<td>Thantha Periyar Govt.<br> Arts and Science Collage.<br>Kajamalai,Trichy.</td>
 <td>2021-2024</td>
 <td>69.08%(four sem Percentage) </td>
 </tr>
 <tr>
 <th>HSC</th>
-<td>Meenakshi Ramaswamy Hr.Sec.<br>school.Thathanur,Ariyalur(DT)</td>
+<td>Meenakshi Ramaswamy Hr.Sec.<br>school.Thathanur,Ariyalur(DT).</td>
 <td>2020-2021</td>
 <td>84.5%</td>
 </tr>
 <tr>
 <th>SSLC</th>
-<td>Meenakshi Ramaswamy Hr.Sec.<br>school.Thathanur,Ariyalur(DT)</td>
+<td>Meenakshi Ramaswamy Hr.Sec.<br>school.Thathanur,Ariyalur(DT).</td>
 <td>2018-2019</td>
 <td>79.02%</td>
 </tr>
